# livecam

./: .gitignore  LICENSE  README.md  configure.md  neverdo.md
client/: broadcast.html  broadcast_login.html  watch.html
client/css/: broadcast.css  watch.css
client/js/: adapter-ddg.js  adapter-detect.js  adapter-webkit.js  adapter.js  broadcast-chat.js  broadcast-core.js  broadcast-donations.js  chat.js  donate.js  sponsor-footer.js  watch-core.js  watch-header.js  watch-split.js
deploy/: .env.example
go-features/: go.mod
go-features/api/: core_logic_bridge.c  main.go
go-features/api/c_src/: core_logic.c  core_logic.h
go-features/chat/: chat_logic_bridge.c  client.go  handler.go  hub.go  moderation.go
go-features/chat/c_src/: chat_logic.c  chat_logic.h
go-features/donations/: db.go  donation_logic_bridge.c  handler.go  provider.go  types.go  validation.go
go-features/donations/c_src/: donation_logic.c  donation_logic.h
rust-core/: Cargo.toml
rust-core/src/: api.rs  config.rs  hls.rs  main.rs
rust-core/src/archive/: mod.rs
rust-core/src/sfu/: mod.rs
